--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -15,11 +15,8 @@ html, body {
   }
   
   .main-container {
-    width: 100%;
-    min-height: 100vh;
     background-color: #ffffff;
-    display: flex;
-    flex-direction: column;
+    color: #000000;
   }
   
   
