--- a/src/components/DiaryList.css
+++ b/src/components/DiaryList.css
@@ -120,6 +120,18 @@
   line-height: 1.3;
 }
 
+.card-content-preview {
+  font-size: 14px;
+  color: #374151;
+  line-height: 1.5;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;  
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal;
+}
+
 .card-thumb {
   width: 100%;
   height: 140px;
